Changes to Handle File Being Sent and caching service in backend