@@ -1,21 +1,27 @@
 package com.manhwa.downloader.settings;
 
+import jakarta.annotation.PostConstruct;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.List;
+import java.util.*;
 
 @Configuration
 public class CorsConfig {
+
+    @Value("${CORS_ALLOWED_ORIGINS:*}")
+    private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOriginPatterns(List.of("*"));  // Use specific origins in production
+        List<String> originPatterns = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOriginPatterns(originPatterns);  // Use specific origins in production
         config.setAllowedHeaders(List.of("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
@@ -24,4 +30,10 @@ public class CorsConfig {
 
         return new CorsFilter(source);
     }
+
+    @PostConstruct
+    public void logCorsOrigins() {
+        System.out.println("Allowed CORS Origins: " + allowedOrigins);
+    }
+
 }
